# Projet-Web-App-educative

./: .gitignore  README.md
backend/: Jouflux_api.py  db_mapping.py  pyproject.toml
frontend/: package.json
frontend/src/: MyBlogContext.tsx  PartieContext.tsx  config.ts
frontend/src/components/: AdminPage.scss  AdminPage.tsx  App.css  App.tsx  Connexion_Admin.css  Connexion_Admin.tsx  CounterPage.css  CounterPage.tsx  CreationAdminPage.tsx  GameInProgress.tsx  JobSelectionPage.css  JobSelectionPage.tsx  KPIPage.tsx  KPIPageALLTeam.tsx  LoginPage.tsx  PageMdpforgot.tsx  PartiePage.css  PartiePage.tsx  PrivateRoute.tsx  SupAdminPage.scss  SupAdminPage.tsx  TeamContentPage.css  TeamContentPage.tsx
frontend/src/dto/: Admin.ts  Equipe.ts  Partie.ts  User.ts
frontend/src/progress_bar/: GainModal.js  ProgressBar.jsx  ProgressBar.scss  Step.jsx  StockModal.js  transitions.js  utils.js
frontend/src/services/: AdminService.tsx  GameService.tsx  KPIService.tsx  PartieService.tsx  SupadminService.tsx  UserService.tsx
