[tool.poetry]
name = "jouflux-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "jouflux_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
SQLAlchemy = "^2.0.23"
typer = "^0.9.0"
pydantic = "^2.4.2"
DateTime = "^5.2"
psycopg2 = "^2.9.9"
sqlalchemy-utils = "^0.41.1"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
